# C.O.-Project-ETL-BI-

./: .gitignore  .pre-commit-config.yaml  CLOUD_SETUP.md  PRODUCTION_DEPLOY.md  QUICKSTART_PRODUCTION.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  docker-compose.yml  render.yaml
C.O. Project (ETL+BI)/: .gitignore  .pre-commit-config.yaml  .ruff.toml  DASHBOARD.md  DATA_PIPELINE_AUDIT.md  LAUNCH_GUIDE.md  Makefile  PYCHARM_DATABASE.md  QUICKSTART.md  README.md  WAREHOUSE_SCHEMA.md  main.py  pyproject.toml  run_dashboard.py
C.O. Project (ETL+BI)/.github/workflows/: ci.yml
C.O. Project (ETL+BI)/cloud/: README.md  dbt_cloud_profiles.yml  etl_cloud.py
C.O. Project (ETL+BI)/cloud/aws/: iam_policy_s3.json  s3_setup.sh
C.O. Project (ETL+BI)/cloud/motherduck/: setup.sql
C.O. Project (ETL+BI)/dashboard/: __init__.py  app.py  app_simple.py  data_loader.py
C.O. Project (ETL+BI)/etl/: __init__.py  config.py  export_gold.py  ingest_excel.py  quality.py  utils.py
C.O. Project (ETL+BI)/predict/: __init__.py  forecast.py
C.O. Project (ETL+BI)/sql_queries/: 01_property_overview.sql  02_revenue_trends.sql  03_building_comparison.sql  04_vacant_suites.sql  05_tenant_roster.sql  06_occupancy_history.sql  07_revenue_by_building.sql  08_kpi_summary.sql  09_collection_analysis.sql  10_custom_analysis.sql
C.O. Project (ETL+BI)/tests/: __init__.py  test_kpi_math.py  test_quality_bronze.py
C.O. Project (ETL+BI)/warehouse/dbt/: dbt_project.yml  profiles.yml
C.O. Project (ETL+BI)/warehouse/dbt/models/: schema.yml
cloud/: dbt_cloud_profiles.yml
lambda/: deploy.sh  (+2 more)
(+32 files in other folders)
